<resources>
    <string name="app_name">Registration Form</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">Register</string>
    <string name="back_button">back button</string>
    <string name="education_details">Education details</string>
    <string name="basic_details">basic details</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="address_details">address details</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="editprofilephoto">editProfilePhoto</string>
    <string name="enter_your_first_name_here">Enter your first name here</string>
    <string name="first_name">First name*</string>
    <string name="last_name">Last name*</string>
    <string name="enter_your_last_name_here">Enter your last name here</string>
    <string name="enter_your_phone_no_here">Enter your phone no here</string>
    <string name="phone_no">Phone no*</string>
    <string name="email">Email*</string>
    <string name="enter_your_email_here">Enter your email here</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password">Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="password_hint">Password</string>
    <string name="show_password">Show Password</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="education_info">Education Info</string>
    <string name="education">Education*</string>
    <string name="please_select_education">Please select education</string>
    <string name="year_of_passing">Year of Passing</string>
    <string name="please_select_passing_year">Please select passing year</string>
    <string name="grade">Grade</string>
    <string name="please_enter_valid_grade">Please enter valid grade</string>
    <string name="enter_your_grade_here">Enter your grade here</string>
    <string name="personal_info">Personal Info</string>
    <string name="experience">Experience</string>
    <string name="enter_your_experience_here">Enter your experience here</string>
    <string name="please_enter_your_experience">Please enter your experience</string>
    <string name="designation">Designation</string>
    <string name="enter_your_designation_here">Enter your designation here</string>
    <string name="please_enter_your_designation">Please enter your designation</string>
    <string name="domain">Domain</string>
    <string name="enter_your_domain_here">Enter your domain here</string>
    <string name="please_enter_valid_domain">Please enter valid domain</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="pin_code">Pin code</string>
    <string name="please_select_state">Please select state</string>
    <string name="users">users :</string>
    <string name="user_full_name">user full name</string>
    <string name="state">State</string>
    <string name="please_select_profile_photo">Please select profile photo</string>
    <string name="test">test</string>
    <string-array name="education">
        <item>Select Your Qualification</item>
        <item>Post Graduate</item>
        <item>Graduate</item>
        <item>HSC/Diploma</item>
        <item>SSC</item>
    </string-array>
    <string-array name="year_of_passing">
        <item>Enter year of passing</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string-array name="states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep </item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
</resources>